# Experiments

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh
Experiments/: Includes.hpp  Main.cpp  Main.hpp  NordicEngine
GameFiles/Shaders/: Text.fragment  Text.vertex  tut1.fragment
